2008-07-19  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m (ns_set_background_color): Apply patch from Chong Yidong to
	fix crash.
	* nsterm.m (ns_maybe_dumpglyphs_background): Compare result from
	NS_FACE_BACKGROUND with 0 instead of nil.
	* nsfont.m (nsfont_draw): Same.

2008-07-18  Chong Yidong  <cyd@stupidchicken.com>

	* Makefile.in (SOME_MACHINE_LISP): Remove ns-carbon-compat.elc.

2008-07-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* puresize.h (BASE_PURESIZE): Increase to 1240000.

2008-07-17  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* gtkutil.c: Include <config.h> instead of "config.h".

	* lisp.h (Foverlay_buffer): Add EXFUN.

	* process.c (create_process) [!WINDOWSNT && FD_CLOEXEC]: Wait for
	child process to complete child_setup.  Undo 2005-09-21 change.

	* s/darwin.h: Mention setsid after vfork.

2008-07-17  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* Makefile.in (frame.o, keyboard.o, xdisp.o, xfaces.o):
	Depend on macgui.h.

	* macfns.c (Fx_server_version): Don't use gestaltSystemVersionMajor,
	gestaltSystemVersionMinor, or gestaltSystemVersionBugFix.

	* macterm.c (keycode_to_xkeysym_table): Add entries for f17, f18,
	and f19.
	[MAC_OSX] (fn_keycode_to_keycode_table): Likewise.

	* macterm.h (gestaltSystemVersionMajor, gestaltSystemVersionMinor)
	(gestaltSystemVersionBugFix) [MAC_OS_X_VERSION_MAX_ALLOWED < 1040]:
	Remove enumerators.

	* mactoolbox.c [USE_MAC_TSM] (mac_handle_text_input_event):
	Check if FACE_FROM_ID returns NULL.

2008-07-17  David Robinow  <drobinow@gmail.com>  (tiny change)

	* w32inevt.c (change_frame_size): Remove extern declaration.
	(resize_event, maybe_generate_resize_event): Pass SAFE arg to
	change_frame_size.

2008-07-17  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* getloadavg.c: Revert last change (2008-07-15).

2008-07-17  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* Makefile.in: Replace emacsapp, emacsbindir, emacsappsrc variables